--- a/division.html
+++ b/division.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>JS интенсив| ДЗ #1</title>
+	<title>JS интенсив| Перевод в системы счисления</title>
 </head>
 <body>
-	<script src="js/numeral-system.js"></script>
 	<script src="js/sum.js"></script>
 </body>
 </html>
